# FeGPT

./: .gitignore  Cargo.toml  README.md  build.rs
src/: cli.rs  data.rs  main.rs  model.rs  perplexity.rs  session.rs  utils.rs
src/data/: batcher.rs  dataset.rs  tokenizer.rs
src/data/dataset/: aesop.rs  shakespeare.rs  utils.rs  wikitext.rs
src/data/tokenizer/: character.rs
src/model/: attention.rs  mlp.rs
